--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+  <a href="/tacos"></a>
+  <a href="/dice"></a>
+  <a href="companies"></a>
     <%= yield %>
   </body>
 </html>
